--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,18 +1,22 @@
 {% extends 'base.html' %}
 
 {% block head %}
-    <title>Login</title>
+    <title>Sing Up</title>
 {% endblock %}
 
 {% block body %}
-    <h1>Login</h1>
-    
+    <h1>Sign Up!</h1>
+
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         {{ form.email }}
+        {{ form.username }}
         {{ form.password }}
+        {{ form.age }}
+        {{ form.gender }}
+        {{ form.location }}
         {{ form.submit }}
     </form>
 
-    <a href="{{url_for('signup')}}">Don't have an account? Sign Up!</a>
+    <a href="{{url_for('login')}}">Already have an account? Login!</a>
 {% endblock %}
