--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
 
     <h1>Login Flask System</h1>
     <a href="{{url_for('login')}}">Login</a><br>
-    <a href="{{url_for('signup')}}">Sign Up</a>
+    <a href="{{url_for('signup')}}">Sign Up</a><br>
+    <a href="{{url_for('ads')}}">Ads</a>
     <!-- <h1>Task Master</h1>
 
     <table>
