--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,35 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
         {% block head %}{% endblock %}
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="{{url_for('index')}}">DB</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" method="POST" action="/login">
+                {% if user.is_authenticated %}
+                <li>
+                    <a class="btn btn-success" href="#">{{user.username}}</a>
+                    <a class="btn btn-success" href="{{url_for('logout')}}"></a>
+                </li>    
+                {% else %}
+                <form class="form-inline my-2 my-lg-0">
+                <!-- <input class="form-control mr-sm-2" type="email" placeholder="Search" >
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
+                    {{ form.hidden_tag() }}
+                    {{ form.email }}
+                    {{ form.password }}
+                    {{ form.submit }}
+                </form>
+                {% endif %}
+            </div>
+          </nav>
         {% block body %}{% endblock %}
     </body>
 </html>
