--- a/templates/login.html
+++ b/templates/login.html
@@ -5,14 +5,20 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Login</h1>
-    
-    <form method="POST" action="">
-        {{ form.hidden_tag() }}
-        {{ form.email }}
-        {{ form.password }}
-        {{ form.submit }}
-    </form>
 
-    <a href="{{url_for('signup')}}">Don't have an account? Sign Up!</a>
+    {% if current_user.is_authenticated %}
+        Hi {{ current_user.username }}
+    {% else %}
+    <h1>Login</h1>
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            {{ form.email }}
+            {{ form.password }}
+            {{ form.submit }}
+        </form>
+    <a href="{{url_for('signup')}}">Don't have an account? Sign Up!</a>    
+    {% endif%}
+    
 {% endblock %}
+    
+
