--- a/templates/index.html
+++ b/templates/index.html
@@ -7,31 +7,15 @@
 {% block body %}
 <div>
 
-    <h1>Login Flask System</h1>
-    <a href="{{url_for('login')}}">Login</a><br>
-    <a href="{{url_for('signup')}}">Sign Up</a><br>
+    {% if current_user.is_authenticated %}
+    <a href="{{url_for('ads')}}">Search</a>
+
+    {% else %}
+    <h1>Welcome to DB</h1>
+    <!-- <a href="{{url_for('login')}}">Login</a><br> -->
+    <!-- <a href="{{url_for('signup')}}">Sign Up</a><br> -->
     <a href="{{url_for('ads')}}">Ads</a>
-    <!-- <h1>Task Master</h1>
 
-    <table>
-        <tr>
-            <th>Task</th>
-            <th>Added</th>
-            <th>Actions</th>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td>
-                <a href="">Update</a><br>
-                <a href="">Delete</a>
-            </td>
-        </tr>
-    </table>
-
-    <form action="/" method="POST">
-        <input type="text" name="content" id="content">
-        <input type="submit" value="Add Task">
-    </form> -->
+    {% endif %}
 </div>
 {% endblock %}
