--- a/templates/ads.html
+++ b/templates/ads.html
@@ -6,5 +6,6 @@
 
 {% block body %}
     <h1>Adverts</h1>
-    <a href="{{url_for('logout')}}">Logout</a>
+    <a href="{{url_for('logout')}}">Logout</a><br>
+    <a href="{{url_for('post')}}">Create a post</a>
 {% endblock %}
