--- a/templates/post.html
+++ b/templates/post.html
@@ -17,16 +17,18 @@
                     <th scope="col">Actions</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td scope="row"></td>
-                    <td scope="row"></td>
-                    <td scope="row">
-                        <a href="/delete">Delete</a><br>
-                        <a href="/update">Update</a>
-                    </td>
-                </tr>
-            </tbody>          
+            {% for post in posts %}
+                <tbody>
+                    <tr>
+                        <td scope="row">{{ post.content }}</td>
+                        <td scope="row">{{ post.date_created.date() }}</td>
+                        <td scope="row">
+                            <a href="/delete">Delete</a><br>
+                            <a href="/update">Update</a>
+                        </td>
+                    </tr>
+                </tbody>
+            {% endfor %}          
         </table>
     </div><br><br><br>
     <div class="d-flex justify-content-md-center align-items-center">
