improving content rendering system

--- a/templates/ads.html
+++ b/templates/ads.html
@@ -42,8 +42,9 @@
 
         
     {% else %}
-        <h1>Adverts</h1>
-        <a href="{{url_for('post')}}">Create a post</a>
+        <br>
+            <h1 class="d-flex justify-content-md-center align-items-center">Adverts</h1>
+        <br>
 
         <div class="container">
             <table class="table table-striped">
