--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="{{url_for('index')}}">DB</a>
+            <a href="{{url_for('index')}}">Home</a>
+            <a href="{{url_for('ads')}}">Ads</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
