--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,11 @@
 <div>
 
     {% if current_user.is_authenticated %}
-    <a href="{{url_for('ads')}}">Search</a>
+    <a class="btn btn-primary" href="{{url_for('ads')}}">Search</a>
 
     {% else %}
     <h1>Welcome to DB</h1>
-    <a href="{{url_for('ads')}}">Ads</a>
+    <a class="btn btn-primary" href="{{url_for('ads')}}">Ads</a>
 
     {% endif %}
 </div>
