--- a/templates/post.html
+++ b/templates/post.html
@@ -17,20 +17,21 @@
                     <th scope="col">Actions</th>
                 </tr>
             </thead>
-            {% for post in posts %}
+            {% for post in user.posts %}
                 <tbody>
                     <tr>
                         <td scope="row">{{ post.content }}</td>
                         <td scope="row">{{ post.date_created.date() }}</td>
                         <td scope="row">
-                            <a class="btn btn-danger" href="/delete">Delete</a>
-                            <a class="btn btn-warning" href="/update">Update</a>
+                            <a href="/delete">Delete</a><br>
+                            <a href="/update">Update</a>
                         </td>
                     </tr>
                 </tbody>
             {% endfor %}          
         </table>
     </div><br><br><br>
+
     <div class="d-flex justify-content-md-center align-items-center">
         <form action="/post" method="POST">
             <label for="content">Create a post</label><br>
@@ -38,8 +39,7 @@
             <input class="btn btn-success" type="submit" value="Send">
         </form>
     </div>
-        
-      
+          
 
     {% else %}
         <h3>You need to log in to create a post</h3>
