--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,7 +33,7 @@
     </div><br><br><br>
 
     <div class="d-flex justify-content-md-center align-items-center">
-        <form action="/post" method="POST">
+        <form action="/profile" method="POST">
             <label for="content">Create a post</label><br>
             <textarea id="content" name="content" rows="5" cols="50"></textarea><br>
             <input class="btn btn-success" type="submit" value="Send">
