--- a/templates/base.html
+++ b/templates/base.html
@@ -11,32 +11,37 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="{{url_for('index')}}">DB</a>
-            <a href="{{url_for('index')}}">Home</a>
-            <a href="{{url_for('ads')}}">Ads</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
           
             <div class="collapse navbar-collapse" method="POST" action="">
+
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                      <a class="nav-link" href="{{url_for('index')}}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="{{url_for('profile')}}">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="{{url_for('ads')}}">Ads</a>
+                    </li>
+                </ul>
+
                 <ul class="navbar-nav ml-auto">
                     {% if current_user.is_authenticated %}
 
                     <li>
-                        <a class="btn btn-success" href="#">{{current_user.first_name}}</a>
+                        <a class="btn btn-outline-success" href="#">{{current_user.first_name}}</a>
                         <a class="btn btn-outline-secondary" href="{{url_for('logout')}}">logout</a>
                     </li>   
 
                     {% else %}
                     
                     <li>
-                        <form class="form-inline" action="/login" method="POST">
-                            <div class="input-group">
-                                <input type="email" class="form-control" placeholder="Email" name="mail">
-                                <input type="password" class="form-control" placeholder="Password" name="pwd">
-                                <input class="btn btn-success" type="submit" value="Login">
-                                <a class="btn btn-outline-success" href="{{url_for('signup')}}">Sign Up</a>
-                            </div>
-                        </form>
+                        <a class="btn btn-success" href="{{url_for('login')}}">Sign In</a>
+                        <a class="btn btn-sm btn-outline-success" href="{{url_for('signup')}}">Sign Up</a>
                     </li>
 
                     {% endif %}
