--- a/templates/login.html
+++ b/templates/login.html
@@ -11,13 +11,28 @@
     
     {% else %}
 
-        <form action="/login" method="POST">
-            <label for="mail">Email</label>
-            <input type="email" id="mail" name="mail">
-            <label for="pwd">Password</label>
-            <input type="password" id="pwd" name="pwd">
-            <input type="submit" value="Submit">
-        </form>
+        <div class="container">
+            <div style="margin-top: 150px;" class="d-flex justify-content-center align-items-center">
+                <div class="card" style="width: 20rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Sign In</h5>
+                      <form action="/login" method="POST">
+                            <div class="form-group">
+                            <label for="mail">Email</label>
+                            <input class="form-control" type="email" id="mail" name="mail">
+                            </div>
+                            <div class="form-group">
+                            <label for="pwd">Password</label>
+                            <input class="form-control" type="password" id="pwd" name="pwd">
+                            </div>
+                            <input class="btn btn-primary" type="submit" value="Submit">
+                    </form>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        
 
     {% endif%}
     
