--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 
         <div class="card bg-dark text-dark">
             <img src="https://images.pexels.com/photos/4359106/pexels-photo-4359106.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" class="card-img" alt="...">
-            <div style="margin-left: 350px; margin-top:150px;" class="card-img-overlay">
+            <div style="margin-left: 15%; margin-top:10%;" class="card-img-overlay">
                 <h3 class="card-title">Welcome to DB</h3>
                 <p class="card-text"><i>Let's have a look at tasks</i></p>
                 <a class="btn btn-outline-dark" href="{{url_for('ads')}}">Search</a>
