--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <br>
-        <h1 class="d-flex justify-content-md-center align-items-center">Welcome to DB</h1>
+        <h1 align="center">Welcome to DB</h1>
         <br>
         <form action="/signup" method="POST">
             <div class="form-group row">
@@ -39,6 +39,12 @@
                 <label class="col-sm-2 col-form-label" for="pwd">Password</label>
                 <div class="col-sm-10">
                     <input class="form-control" type="password" id="pwd" name="pwd">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label" for="pwd2">Confirm Password</label>
+                <div class="col-sm-10">
+                    <input class="form-control" type="password" id="pwd2" name="pwd2">
                 </div>
             </div>
             <div class="form-group row">
