--- a/templates/base.html
+++ b/templates/base.html
@@ -58,16 +58,16 @@
             {% if messages %}
               {% for category, message in messages %}
                 {% if category == 'error' %}
-                  <div class="alert alert-danger alter-dismissable fade show" role="alert">
+                  <div class="alert alert-danger alert-dismissible fade show" role="alert">
                     {{ message }}
-                    <button type="button" class="close" data-dismiss="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
                 {% else %}
-                  <div class="alert alert-success alter-dismissable fade show" role="alert">
+                  <div class="alert alert-success alert-dismissible fade show" role="alert">
                     {{ message }}
-                    <button type="button" class="close" data-dismiss="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
