--- a/templates/base.html
+++ b/templates/base.html
@@ -14,12 +14,12 @@
               class="navbar-toggler" 
               type="button" 
               data-toggle="collapse" 
-              data-target="#navbar-nav"
+              data-target="#nav-menu"
             >
               <span class="navbar-toggler-icon"></span>
             </button>
           
-            <div class="collapse navbar-collapse">
+            <div id="nav-menu" class="collapse navbar-collapse">
 
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
@@ -36,15 +36,15 @@
                 <ul class="navbar-nav ml-auto">
                     {% if current_user.is_authenticated %}
 
-                    <li>
-                        <a class="btn btn-outline-success" href="#">{{current_user.first_name}}</a>
-                        <a class="btn btn-outline-secondary" href="{{url_for('logout')}}">logout</a>
+                    <li class="nav-item">
+                        <a class="btn btn-sm btn-outline-success" href="{{url_for('profile')}}">{{current_user.first_name}}</a>
+                        <a class="btn btn-sm btn-outline-secondary" href="{{url_for('logout')}}">Log Out</a>
                     </li>   
 
                     {% else %}
                     
-                    <li>
-                        <a class="btn btn-success" href="{{url_for('login')}}">Sign In</a>
+                    <li class="nav-item">
+                        <a class="btn btn-sm btn-success" href="{{url_for('login')}}">Sign In</a>
                         <a class="btn btn-sm btn-outline-success" href="{{url_for('signup')}}">Sign Up</a>
                     </li>
 
@@ -77,7 +77,8 @@
           {% endwith %}
 
         {% block body %}{% endblock %}
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
