--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
     {% else %}
 
         <div class="container">
-            <div style="margin-top: 150px;" class="d-flex justify-content-center align-items-center">
+            <div style="margin-top: 10%;" class="d-flex justify-content-center align-items-center">
                 <div class="card" style="width: 20rem;">
                     <div class="card-body">
                       <h5 class="card-title">Sign In</h5>
