--- a/templates/profile.html
+++ b/templates/profile.html
@@ -42,6 +42,26 @@
           
 
     {% else %}
-        <h3>You need to log in to create a post</h3>
+        
+        <div class="container">
+            <h4 align="center" style="margin-top: 3%;">Trying to access your profile? Please log in!</h4><br>
+            <div style="margin-top: 5%;" class="d-flex justify-content-center align-items-center">
+                <div class="card" style="width: 20rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Sign In</h5>
+                      <form action="/login" method="POST">
+                            <div class="form-group">
+                            <label for="mail">Email</label>
+                            <input class="form-control" type="email" id="mail" name="mail">
+                            </div>
+                            <div class="form-group">
+                            <label for="pwd">Password</label>
+                            <input class="form-control" type="password" id="pwd" name="pwd">
+                            </div>
+                            <input class="btn btn-primary" type="submit" value="Submit">
+                    </form>
+                    </div>
+                </div>
+            </div>
     {% endif %}
 {% endblock %}
