redirecting is added to signup page for authorised users

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,13 +2,17 @@
 
 {% block head %}
     <title>Sing Up</title>
+    {% if current_user.is_authenticated %}
+        <meta http-equiv="REFRESH" content="4; profile">
+    {% endif %}
+
 {% endblock %}
 
 {% block body %}
 
     {% if current_user.is_authenticated %}
     
-    <h1>Hi {{ current_user.first_name }}! You are already registered!</h1>
+    <h3 align="center" style="margin-top: 5%;">Hi {{ current_user.first_name }}! You are being redirected to your profile!</h3>
 
     {% else %}
 
