editing DOM to make the post button visible and invisible & button styles

--- a/templates/ads.html
+++ b/templates/ads.html
@@ -35,7 +35,7 @@
                     {% endfor %}          
                 </table>
 
-                <a class="btn btn-primary" href="{{url_for('profile')}}">Create a post</a>
+                <a class="btn btn-outline-dark" href="{{url_for('profile')}}">Create a post</a>
 
             </div>
             
@@ -47,30 +47,32 @@
         <br>
             <h1 class="d-flex justify-content-md-center align-items-center">Adverts</h1>
         <br>
-
-        <div class="container">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">Task</th>
-                        <th scope="col">Added</th>
-                        <th scope="col">Owner</th>
-                    </tr>
-                </thead>
-                {% for post in posts %}
-                    <tbody>
+        {% if posts|length < 1 %}
+            <h1>There is no post yet</h1> 
+            <a class="btn btn-primary" href="{{url_for('profile')}}">Create a post</a>
+            
+        {% else %}
+            <div class="container">
+                <table class="table table-striped">
+                    <thead>
                         <tr>
-                            <td scope="row">{{ post.content }}</td>
-                            <td scope="row">{{ post.date_created.date() }}</td>
-                            <td scope="row"></td>       
-                            </td>
+                            <th scope="col">Owner</th>
+                            <th scope="col">Task</th>
+                            <th scope="col">Added</th>
                         </tr>
-                    </tbody>
-                {% endfor %}          
-            </table>
-        </div>
-
+                    </thead>
+                    {% for post in posts %}
+                        <tbody>
+                            <tr>
+                                <td scope="row">{{ post.user.first_name }}</td>
+                                <td scope="row">{{ post.content }}</td>
+                                <td scope="row">{{ post.date_created.date() }}</td>                  
+                            </tr>
+                        </tbody>
+                    {% endfor %}          
+                </table>
+            </div>
+        {% endif %}
     {% endif %}
-    
     
 {% endblock %}
