--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             <div style="margin-left: 350px; margin-top:150px;" class="card-img-overlay">
                 <h3 class="card-title">Welcome to DB {{current_user.first_name}}</h3>
                 <p class="card-text"><i>Lets have a look at tasks</i></p>
-                <a class="btn btn-primary" href="{{url_for('ads')}}">Search</a>
+                <a class="btn btn-outline-dark" href="{{url_for('ads')}}">Search</a>
             </div>         
         </div>
 
