--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@
                             <label for="pwd">Password</label>
                             <input class="form-control" type="password" id="pwd" name="pwd">
                             </div>
-                            <input class="btn btn-primary" type="submit" value="Submit">
+                            <input class="btn btn-outline-dark" type="submit" value="Sign In">
                     </form>
                     </div>
                 </div>
