--- a/templates/signup.html
+++ b/templates/signup.html
@@ -69,7 +69,7 @@
                     <input class="form-control" type="text" id="location" name="location">
                 </div>
             </div>
-            <input class="btn btn-primary" type="submit" value="Register"></input>
+            <input class="btn btn-outline-dark" type="submit" value="Register"></input>
         </form>
     </div>
 
