--- a/templates/profile.html
+++ b/templates/profile.html
@@ -30,26 +30,25 @@
                 </tbody>
             {% endfor %}          
         </table>
+
+        <button 
+        class="btn btn-outline-dark" 
+        type="button" onclick="document.getElementById('create-post').style.display = ''"
+        >
+        Create New Post
+    </button>
     </div><br><br>
 
 
-    <!-- <button type="button" onclick="show()">Create Post</button> -->
-
-
-    <!-- <div id="create-post" style="display: none;"> -->
-    <div class="d-flex justify-content-md-center align-items-center">
-        <form action="/profile" method="POST">
-            <label style="margin-bottom: 5%; margin-left: 37%; font-weight: bold;" for="content"><important>Create post</important></label><br>
-            <textarea id="content" name="content" rows="5" cols="50"></textarea><br>
-            <input class="btn btn-success" type="submit" value="Create">
-        </form>
-    </div>
-    <!-- </div> -->
-    
-    <!-- <script>
-        let show = () => document.getElementById('create-post').style.display = "inline;"
-    </script> -->
-          
+    <div id="create-post" style="display: none;">
+        <div class="d-flex justify-content-md-center align-items-center">
+            <form action="/profile" method="POST">
+                <label style="margin-bottom: 5%; margin-left: 37%; font-weight: bold;" for="content"><important>Create post</important></label><br>
+                <textarea id="content" name="content" rows="5" cols="50"></textarea><br>
+                <input class="btn btn-outline-success" type="submit" value="Submit">
+            </form>
+        </div>
+    </div>      
 
     {% else %}
         
@@ -68,7 +67,7 @@
                             <label for="pwd">Password</label>
                             <input class="form-control" type="password" id="pwd" name="pwd">
                             </div>
-                            <input class="btn btn-primary" type="submit" value="Submit">
+                            <input class="btn btn-outline-dark" type="submit" value="Sign In">
                     </form>
                     </div>
                 </div>
