--- a/templates/update.html
+++ b/templates/update.html
@@ -17,7 +17,7 @@
                     <form action="/update/{{posts.id}}" method="POST">
                         <label style="margin-top:30%; margin-bottom: 5%; margin-left: 37%; font-weight: bold;" for="content"><important>Update Post</important></label><br>
                         <textarea id="content" name="content" rows="5" cols="50">{{posts.content}}</textarea><br>
-                        <input style="margin-top: 5%;" class="btn btn-success" type="submit" value="Update">
+                        <input style="margin-top: 5%;" class="btn btn-outline-success" type="submit" value="Update">
                     </form>
                 </div>
             </div>
