--- a/templates/base.html
+++ b/templates/base.html
@@ -33,19 +33,37 @@
                     </li>
                 </ul>
 
+                <ul class="navbar-nav">
+                  <form 
+                  class="form-inline my-2 my-lg-0"
+                  action="/search">
+                    <input 
+                        class="form-control mr-sm-2" 
+                        type="search" 
+                        placeholder="Search" 
+                        aria-label="Search"
+                        name="search">
+                    <button 
+                        class="btn btn-outline-success my-2 my-sm-0" 
+                        type="submit">
+                        Search
+                    </button>
+                  </form>
+                </ul>
+
                 <ul class="navbar-nav ml-auto">
                     {% if current_user.is_authenticated %}
 
                     <li class="nav-item">
-                        <a class="btn btn-sm btn-outline-success" href="{{url_for('profile')}}">{{current_user.first_name}}</a>
-                        <a class="btn btn-sm btn-outline-secondary" href="{{url_for('logout')}}">Log Out</a>
+                        <a class="btn btn-outline-success" href="{{url_for('profile')}}">{{current_user.first_name}}</a>
+                        <a class="btn btn-outline-secondary" href="{{url_for('logout')}}">Log Out</a>
                     </li>   
 
                     {% else %}
                     
                     <li class="nav-item">
-                        <a class="btn btn-sm btn-success" href="{{url_for('login')}}">Sign In</a>
-                        <a class="btn btn-sm btn-outline-success" href="{{url_for('signup')}}">Sign Up</a>
+                        <a class="btn btn-success" href="{{url_for('login')}}">Sign In</a>
+                        <a class="btn btn-outline-success" href="{{url_for('signup')}}">Sign Up</a>
                     </li>
 
                     {% endif %}
